@@ -1,3 +1,6 @@
+2007/02/03
+.backwards compatibility of archetypes without language section
+
 2007/02/02
 .added missing language attribute in translation details
 
